// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DatePicker click can open picker 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
    <div
      class="g-datepicker-panel-wrapper"
    >
      <div
        class="g-datepicker-day-picker"
      >
        <header
          class="g-datepicker-day-picker-header"
        >
          <div>
            <span
              class="g-datepicker-day-picker-header-arrow"
            >
              <svg
                class="icon"
              >
                <use
                  xlink:href="#icon-arrow-double-left"
                />
              </svg>
            </span>
            <span
              class="g-datepicker-day-picker-header-arrow"
            >
              <svg
                class="icon"
              >
                <use
                  xlink:href="#icon-arrow-left"
                />
              </svg>
            </span>
          </div>
          <div
            class="g-datepicker-day-picker-header-day-and-month"
          >
            <span>
              2023年
            </span>
            <span>
              2月
            </span>
          </div>
          <div>
            <span
              class="g-datepicker-day-picker-header-arrow"
            >
              <svg
                class="icon"
              >
                <use
                  xlink:href="#icon-arrow-right"
                />
              </svg>
            </span>
            <span
              class="g-datepicker-day-picker-header-arrow"
            >
              <svg
                class="icon"
              >
                <use
                  xlink:href="#icon-arrow-double-right"
                />
              </svg>
            </span>
          </div>
        </header>
        <main
          class="g-datepicker-day-picker-content"
        >
          <span
            class="g-datepicker-day-picker-row"
          >
            <span
              class="g-datepicker-day-picker-title"
            >
              日
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              一
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              二
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              三
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              四
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              五
            </span>
            <span
              class="g-datepicker-day-picker-title"
            >
              六
            </span>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                29
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                30
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                31
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                1
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                2
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                3
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                4
              </span>
            </div>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                5
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                6
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                7
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                8
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                9
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                10
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                11
              </span>
            </div>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                12
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                13
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                14
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                15
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                16
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                17
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                18
              </span>
            </div>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                19
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                20
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                21
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                22
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                23
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                24
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                25
              </span>
            </div>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                26
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                27
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item"
              >
                28
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                1
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                2
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                3
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                4
              </span>
            </div>
          </span>
          <span
            class="g-datepicker-day-picker-row"
          >
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                5
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                6
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                7
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                8
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                9
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                10
              </span>
            </div>
            <div>
              <span
                class="g-datepicker-day-picker-item g-datepicker-day-picker-item-not-in-this-month"
              >
                11
              </span>
            </div>
          </span>
        </main>
        <footer
          class="g-datepicker-day-picker-footer"
        >
          <span>
            今 天
          </span>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker click can open picker 2`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker onchange can work 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="1234"
        readonly=""
        type="text"
        value="2023-01-01"
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker should Render Correctly 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="点击输入日期"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`test DatePicker test month picker 1`] = `
<DocumentFragment>
  <div
    class="g-datepicker"
  >
    <div
      class="g-input g-input-middle"
    >
      <input
        class="g-input-origin"
        placeholder="点击输入日期"
        readonly=""
        type="text"
        value=""
        width="200"
      />
      <span
        class="g-input-suffix"
      >
        <svg
          class="icon"
        >
          <use
            xlink:href="#icon-date"
          />
        </svg>
      </span>
    </div>
    <div
      class="g-datepicker-panel-wrapper"
    >
      <div
        class="g-datepicker-panel"
      >
        <header
          class="g-datepicker-panel-header"
        >
          <span
            class="g-datepicker-panel-header-arrow"
          >
            <svg
              class="icon"
            >
              <use
                xlink:href="#icon-arrow-double-left"
              />
            </svg>
          </span>
          <span
            class="g-datepicker-panel-header-middle"
          >
            2023年
          </span>
          <span
            class="g-datepicker-panel-header-arrow"
          >
            <svg
              class="icon"
            >
              <use
                xlink:href="#icon-arrow-double-right"
              />
            </svg>
          </span>
        </header>
        <main
          class="g-datepicker-panel-content"
        >
          <div
            class="g-datepicker-panel-content-row"
          >
            <div>
              <span
                class=""
              >
                  一月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  二月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  三月
              </span>
            </div>
          </div>
          <div
            class="g-datepicker-panel-content-row"
          >
            <div>
              <span
                class=""
              >
                  四月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  五月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  六月
              </span>
            </div>
          </div>
          <div
            class="g-datepicker-panel-content-row"
          >
            <div>
              <span
                class=""
              >
                  七月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  八月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  九月
              </span>
            </div>
          </div>
          <div
            class="g-datepicker-panel-content-row"
          >
            <div>
              <span
                class=""
              >
                  十月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  十一月
              </span>
            </div>
            <div>
              <span
                class=""
              >
                  十二月
              </span>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
